lib_LTLIBRARIES = libfibril.la
include_HEADERS = fibril.h
pkginclude_HEADERS = fibril/fibrili.h fibril/setjmp.h
libfibril_la_SOURCES = deque.c \
                       fibrili.c \
                       param.c \
                       proc.c \
                       runtime.c \
                       stack.c \
                       stats.c
