lib_LTLIBRARIES = libfibril.la

include_HEADERS = fibril.h

pkginclude_HEADERS = \
                     cilkplus.h \
                     fibrile.h \
                     fibrili.h \
                     fork.h \
                     serial.h

libfibril_la_SOURCES = deque.c \
                       fibrili.c \
                       param.c \
											 pool.c \
                       runtime.c \
                       stack.c \
                       stats.c \
											 mutex.c
